--- a/css/style.css
+++ b/css/style.css
@@ -40,8 +40,8 @@ header h1{
 
 .caixa-login{
     position: relative;
-    width: 50%;
-    height: 60vh;
+    width: 35vw;
+    height: 50vh;
     background-color: #fff;
     border-radius: 12% 12% 0 0;
 }
@@ -96,20 +96,20 @@ input{
     align-content: center;
 }
 
-.botao-enviar input:hover{
-    background-color: #407f00;
-}
-
 .botao-enviar input{
     margin-top: 1.5%;
-    width: 10%;
-    padding: 1.1%;
+    width: 9%;
+    padding: 0.9%;
     background-color: #55A603;
     color: #fff;
     font-weight: bold;
     border: 1px solid #55A603;
     box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25), 0px 2px 2px rgba(0, 0, 0, 0.25), 0px 2px 2px rgba(0, 0, 0, 0.25), 0px 2px 2px rgba(0, 0, 0, 0.25), 0px 2px 2px rgba(0, 0, 0, 0.25), 0px 2px 2px rgba(0, 0, 0, 0.25), 0px 2px 2px rgba(0, 0, 0, 0.25), 0px 2px 2px rgba(0, 0, 0, 0.25);
     border-radius: 5px;
+}
+
+.botao-enviar input:hover{
+    background-color: #407f00;
 }
 
 
